--- a/atividade_10_dvmob/index.html
+++ b/atividade_10_dvmob/index.html
@@ -14,7 +14,8 @@
 
 <h1>Perfil #catsoninstagram</h1>
 
-<img src=“images/dog.jpg” />
+
+<img src="/imagens/dog.jpg" width="800" height="600">
 
 </body>
 
